--- a/style.css
+++ b/style.css
@@ -123,3 +123,37 @@ body{
   left: 0;
   background-color: #03a9f4;
 }
+
+.about{
+  padding-bottom: 50px;
+}
+.title2{
+  padding-bottom:10px;
+  color: #003147;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+p{
+  color: #686868;
+}
+.about .box{
+  display: flex;
+  margin: 20px 0;
+}
+.about .box .text{
+  text-transform: uppercase;
+}
+.about .box .year{
+  color: #686868;
+  min-width: 200px;
+}
+.about .box .text H4{
+  font-size: 16px;
+  color: #2a7da4;
+}
+.skills .box .percente div{
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #003147;
+}
