--- a/style.css
+++ b/style.css
@@ -151,9 +151,38 @@ p{
   font-size: 16px;
   color: #2a7da4;
 }
+.skills .box {
+  position: relative;
+  display: grid;
+  width: 100%;
+  grid-template-columns: 150px 1fr;
+  align-items: center;
+}
+.skills .box .percente{
+  position: relative;
+  background-color: #f0f0f0ff;
+  width: 100%;
+  height: 10px;
+}
 .skills .box .percente div{
   position: absolute;
   top: 0;
   left: 0;
-  background-color: #003147;
+  height: 100%;
+  background-color: #03a9f4;
+}
+.skills .box h4{
+  color: #848c99;
+  font-weight: 400;
+}
+
+.interest ul li{
+  font-weight: 500;
+  list-style: none;
+  margin: 10px;
+}
+.interest ul li .fa{
+  color: #03a9f4;
+  font-size: 20px;
+  margin-right: 10px;
 }
